<resources>
    <string name="app_name">RoomProject</string>

    <!--text general-->
    <string name="txt_user_general">Usuario:</string>
    <string name="txt_text_blank">----</string>
    <!--hin-->
    <string name="txt_hin_new_password_general">Nueva contraseña</string>
    <string name="txt_hin_repeat_password_general">Repetir contraseña</string>
    <string name="txt_hin_old_password_general">Contraseña antigua</string>

    <string name="txt_email_void_register_user">Campo correo vacío</string>
    <string name="txt_password_void_register_user">Campo contraseña vacío</string>
    <string name="txt_repeat_password_void_register_user">Campo repetir contraseña vacío</string>
    <string name="txt_email_valid_void_register_user">Correo no válido</string>
    <string name="title_activity_register_users">RegisterUsersActivity</string>

    <!--Text_Login-->
    <string name="textRegister">Aun no tienes cuenta?</string>
    <string name="forgotMyDetails">Olvide mis datos</string>

    <!--Text_Dialogs-->
    <string name="text_save_user">Usuario guardado</string>
    <string name="text_error_save_user">Error al guardar usuario</string>
    <string name="txt_close_session_dialog">¿Desea cerrar su sesión?</string>

    <string name="txtDeleteUser">¿Esta seguro de eliminar su usuario?</string>
    <string name="btnYes">Si</string>
    <string name="btnNo">No</string>


    <!--Toast-->
    <string name="textErrorEmailAndPassword">Correo o contraseña incorrectos</string>

    <string name="text_change_password">Su contraseña se cambio</string>
    <string name="text_error_change_password">Error al actualizar contraseña</string>

    <!--Bottom-->
    <string name="btn_text_accept">ACEPTAR</string>
    <string name="btn_text_confirm_change_password">Confirmar</string>
    <string name="btn_close_session_cancel">CANCELAR</string>


    <!--Text_InfoUser-->
    <string name="textInformation">Información</string>
    <string name="textName">Nombre:</string>
    <string name="textEmail">Correo:</string>
    <string name="textStatus">Estado:</string>
    <string name="textDelete">Eliminar</string>
    <string name="textUpdate">Editar</string>
    <string name="textEditPassword">Editar contraseña</string>


</resources>