<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linearbase"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/shape_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_close_session_dialog"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/btnAcceptCloseSession"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/myColorRed"
                android:text="@string/btn_text_accept"
                android:layout_marginEnd="15dp"/>

            <Button
                android:id="@+id/btnCancelCloseSession"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/myColorGreen"
                android:text="@string/btn_close_session_cancel"
                android:layout_marginStart="15dp"/>
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>